test/corpus/for_loops.txt
================================================================================
for loop with range
================================================================================
for (i in 1..10) {
    println(i)
}
--------------------------------------------------------------------------------
(source_file
  (for_statement
    (variable_declaration
      (identifier))
    (range_expression
      (decimal_integer_literal)
      (decimal_integer_literal))
    (control_structure_body
      (statements
        (call_expression
          (identifier)
          (call_suffix
            (value_arguments
              (value_argument
                (identifier)))))))))

================================================================================
for loop with collection
================================================================================
for (item in list) {
    println(item)
}
--------------------------------------------------------------------------------
(source_file
  (for_statement
    (variable_declaration
      (identifier))
    (identifier)
    (control_structure_body
      (statements
        (call_expression
          (identifier)
          (call_suffix
            (value_arguments
              (value_argument
                (identifier)))))))))

================================================================================
for loop with indices
================================================================================
for (i in list.indices) {
    println(list[i])
}
--------------------------------------------------------------------------------
(source_file
  (for_statement
    (variable_declaration
      (identifier))
    (navigation_expression
      (identifier)
      (navigation_suffix
        (identifier)))
    (control_structure_body
      (statements
        (call_expression
          (identifier)
          (call_suffix
            (value_arguments
              (value_argument
                (indexing_expression
                  (identifier)
                  (indexing_suffix
                    (identifier)))))))))))

================================================================================
for loop with withIndex
================================================================================
for ((index, value) in list.withIndex()) {
    println("$index: $value")
}
--------------------------------------------------------------------------------
(source_file
  (for_statement
    (multi_variable_declaration
      (variable_declaration
        (identifier))
      (variable_declaration
        (identifier)))
    (call_expression
      (navigation_expression
        (identifier)
        (navigation_suffix
          (identifier)))
      (call_suffix
        (value_arguments)))
    (control_structure_body
      (statements
        (call_expression
          (identifier)
          (call_suffix
            (value_arguments
              (value_argument
                (string_literal
                  (interpolated_identifier)
                  (string_content)
                  (interpolated_identifier))))))))))

================================================================================
for loop with step
================================================================================
for (i in 1..10 step 2) {
    println(i)
}
--------------------------------------------------------------------------------
(source_file
  (for_statement
    (variable_declaration
      (identifier))
    (infix_expression
      (range_expression
        (decimal_integer_literal)
        (decimal_integer_literal))
      (identifier)
      (decimal_integer_literal))
    (control_structure_body
      (statements
        (call_expression
          (identifier)
          (call_suffix
            (value_arguments
              (value_argument
                (identifier)))))))))

================================================================================
for loop downTo
================================================================================
for (i in 10 downTo 1) {
    println(i)
}
--------------------------------------------------------------------------------
(source_file
  (for_statement
    (variable_declaration
      (identifier))
    (infix_expression
      (decimal_integer_literal)
      (identifier)
      (decimal_integer_literal))
    (control_structure_body
      (statements
        (call_expression
          (identifier)
          (call_suffix
            (value_arguments
              (value_argument
                (identifier)))))))))

================================================================================
for loop until
================================================================================
for (i in 0 until size) {
    println(i)
}
--------------------------------------------------------------------------------
(source_file
  (for_statement
    (variable_declaration
      (identifier))
    (infix_expression
      (decimal_integer_literal)
      (identifier)
      (identifier))
    (control_structure_body
      (statements
        (call_expression
          (identifier)
          (call_suffix
            (value_arguments
              (value_argument
                (identifier)))))))))

================================================================================
nested for loops
================================================================================
for (i in 1..3) {
    for (j in 1..3) {
        println("$i, $j")
    }
}
--------------------------------------------------------------------------------
(source_file
  (for_statement
    (variable_declaration
      (identifier))
    (range_expression
      (decimal_integer_literal)
      (decimal_integer_literal))
    (control_structure_body
      (statements
        (for_statement
          (variable_declaration
            (identifier))
          (range_expression
            (decimal_integer_literal)
            (decimal_integer_literal))
          (control_structure_body
            (statements
              (call_expression
                (identifier)
                (call_suffix
                  (value_arguments
                    (value_argument
                      (string_literal
                        (interpolated_identifier)
                        (string_content)
                        (interpolated_identifier)))))))))))))

================================================================================
for loop with destructuring
================================================================================
for ((key, value) in map) {
    println("$key = $value")
}
--------------------------------------------------------------------------------
(source_file
  (for_statement
    (multi_variable_declaration
      (variable_declaration
        (identifier))
      (variable_declaration
        (identifier)))
    (identifier)
    (control_structure_body
      (statements
        (call_expression
          (identifier)
          (call_suffix
            (value_arguments
              (value_argument
                (string_literal
                  (interpolated_identifier)
                  (string_content)
                  (interpolated_identifier))))))))))
