test/corpus/interfaces.txt
================================================================================
Simple Interface
================================================================================

interface Foo {
    fun bar()
}

--------------------------------------------------------------------------------

(source_file
  (interface_declaration
    (type_identifier)
    (interface_body
      (function_declaration
        (identifier)
        (parameters)))))

================================================================================
Functional Interface
================================================================================

fun interface Foo {
    fun bar()
}

--------------------------------------------------------------------------------

(source_file
  (interface_declaration
    (type_identifier)
    (interface_body
      (function_declaration
        (identifier)
        (parameters)))))

================================================================================
Annotated Interface
================================================================================

@MyAnnotation
interface TestInterface {
    fun getData(): String
}

--------------------------------------------------------------------------------

(source_file
  (interface_declaration
    (modifiers
      (annotation
        (user_type
          (type_identifier))))
    (type_identifier)
    (interface_body
      (function_declaration
        (identifier)
        (parameters)
        (user_type
          (type_identifier))))))

================================================================================
Interface with Inheritance
================================================================================

interface Child : Parent {
    fun childMethod()
}

--------------------------------------------------------------------------------

(source_file
  (interface_declaration
    (type_identifier)
    (delegation_specifier
      (user_type
        (type_identifier)))
    (interface_body
      (function_declaration
        (identifier)
        (parameters)))))

================================================================================
Generic Interface
================================================================================

interface Repository<T> {
    fun save(item: T): T
    fun findAll(): List<T>
}

--------------------------------------------------------------------------------

(source_file
  (interface_declaration
    (type_identifier)
    (type_parameters
      (type_parameter
        (type_identifier)))
    (interface_body
      (function_declaration
        (identifier)
        (parameters
          (parameter
            (identifier)
            (user_type
              (type_identifier))))
        (user_type
          (type_identifier)))
      (function_declaration
        (identifier)
        (parameters)
        (user_type
          (type_identifier)
          (type_arguments
            (type_projection
              (user_type
                (type_identifier)))))))))
