test/corpus/soft_keywords.txt
==================
Actual as an identifier
==================


fun foo() {
  val actual = IntArray(n)
  actual[0]++
}

---
(source_file
  (function_declaration
  (identifier)
  (parameters)
  (function_body
    (statements
    (property_declaration
      (binding_pattern_kind)
      (variable_declaration
      (identifier))
      (call_expression
      (identifier)
      (call_suffix
        (value_arguments
        (value_argument
          (identifier))))))
    (postfix_expression
      (indexing_expression
      (identifier)
      (indexing_suffix
        (decimal_integer_literal))))))))
