test/corpus/statements.txt
================================================================================
For statements
================================================================================

for (value in values) {}

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (variable_declaration
      (identifier))
    (identifier)
    (control_structure_body)))

================================================================================
Statements separated by semicolon
================================================================================

override fun isDisposed(): Boolean { expectUnreached();  return false }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (modifiers
      (member_modifier))
    (identifier)
    (parameters)
    (user_type
      (type_identifier))
    (function_body
      (statements
        (call_expression
          (identifier)
          (call_suffix
            (value_arguments)))
        (jump_expression
          (boolean_literal))))))

================================================================================
Getters
================================================================================

val x get () = 2

val ty x get () = 3

--------------------------------------------------------------------------------

(source_file
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (identifier))
    (getter
      (function_body
        (decimal_integer_literal))))
  (property_declaration
    (binding_pattern_kind)
    (receiver_type
      (user_type
        (type_identifier)))
    (variable_declaration
      (identifier))
    (getter
      (function_body
        (decimal_integer_literal)))))
